# resource-backed-dask-array

./: .copier-answers.yml  .github_changelog_generator  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
resource_backed_dask_array/: __init__.py  _test.py
src/resource_backed_dask_array/: __init__.py  _array.py  _test.py
tests/: test_resource_backed_dask_array.py
