[metadata]
name = resource_backed_dask_array
description = experimental Dask array that opens/closes a resource when computing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/resource-backed-dask-array
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source Code =https://github.com/tlambert03/resource-backed-dask-array

[options]
packages = find:
install_requires =
    dask[array]
    typing-extensions
    importlib-metadata>=1.5.0;python_version < "3.8"
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.extras_require]
dev =
    black
    flake8
    flake8-docstrings
    ipython
    isort
    jedi<0.18.0
    mypy
    pre-commit
    pydocstyle
    pytest
testing =
    pytest
    pytest-cov
    tox
    tox-conda

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = resource_backed_dask_array

[pydocstyle]
match_dir = resource_backed_dask_array
convention = numpy
add_select = D402,D415,D417
ignore = D100, D213, D401, D413, D107

[tool:pytest]
addopts = -W error

[mypy]
files = resource_backed_dask_array
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    @overload
    except ImportError
